--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx,json}'",
-    "lint:fix": "eslint --fix 'src/**/*.{js,jsx, ts,tsx,json}'",
+    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx,json,md}'",
+    "lint:fix": "eslint --fix 'src/**/*.{js,jsx, ts,tsx,json,md}'",
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "dependencies": {
