--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.5"
-  },
-  "devDependencies": {
+    "react-router-dom": "^6.4.5",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "vite": "^4.0.0",
+    "@vitejs/plugin-react": "^3.0.0"
+  },
+  "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
-    "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.29.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -35,7 +36,6 @@
     "postcss": "^8.4.20",
     "prettier": "^2.8.1",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "typescript": "^4.9.3"
   }
 }
