--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
     "singleQuote": true,
     "trailingComma": "all",
     "jsxSingleQuote": false,
-    "bracketSpacing": true
+    "bracketSpacing": true,
+    "endOfLine": "lf"
   }
