--- a/.github/workflows/ESLintAndPrettier.yml
+++ b/.github/workflows/ESLintAndPrettier.yml
@@ -23,6 +23,17 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 18
+          cache: 'yarn'
+
+      # ESLint and Prettier must be in `package.json`
+      - name: Install Node.js dependencies by yarn
+        run: rm -rf node_modules && yarn install --immutable --immutable-cache --check-cache
+
+      - name: Run linters
+        uses: wearerequired/lint-action@v2
+        with:
+          eslint: true
+          prettier: true
           
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
@@ -35,13 +46,3 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
-
-      # ESLint and Prettier must be in `package.json`
-      - name: Install Node.js dependencies by yarn
-        run: rm -rf node_modules && yarn install --immutable --immutable-cache --check-cache
-
-      - name: Run linters
-        uses: wearerequired/lint-action@v2
-        with:
-          eslint: true
-          prettier: true
