--- a/.github/workflows/ESLintAndPrettier.yml
+++ b/.github/workflows/ESLintAndPrettier.yml
@@ -26,11 +26,7 @@ jobs:
           cache: 'yarn'
 
       # ESLint and Prettier must be in `package.json`
-      - name: Install Node.js dependencies by yarn
-        run: rm -rf node_modules && yarn install --immutable --immutable-cache --check-cache
-
-      - name: Run linters
-        uses: wearerequired/lint-action@v2
-        with:
-          eslint: true
-          prettier: true
+      - name: Run ESLint
+        run: eslint . --ext .js,.jsx,.ts,.tsx
+      - name: Run Prettier
+        run: prettier --check 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc
