--- a/.github/workflows/ESLintAndPrettier.yml
+++ b/.github/workflows/ESLintAndPrettier.yml
@@ -27,6 +27,6 @@ jobs:
 
       # ESLint and Prettier must be in `package.json`
       - name: Run ESLint
-        run: eslint . --ext .js,.jsx,.ts,.tsx
+        run: 'yarn lint'
       - name: Run Prettier
-        run: prettier --check 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc
+        run: 'yarn prettiercheck'
