--- a/.github/workflows/ESLintAndPrettier.yml
+++ b/.github/workflows/ESLintAndPrettier.yml
@@ -18,15 +18,18 @@ jobs:
     steps:
       - name: Check out Git repository
         uses: actions/checkout@v3
-
+    #install node and cache yarn
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: 'yarn'
 
+      - name: Install dependencies
+        run: 'yarn install --immutable --immutable-cache --check-cache'
+
       # ESLint and Prettier must be in `package.json`
       - name: Run ESLint
-        run: 'yarn lint'
+        run: 'yarn lint:fix'
       - name: Run Prettier
         run: 'yarn prettiercheck'
