--- a/.github/workflows/ESLintAndPrettier.yml
+++ b/.github/workflows/ESLintAndPrettier.yml
@@ -1,4 +1,4 @@
-name: Lint
+name: CI
 
 on:
   # Trigger the workflow on push or pull request,
@@ -33,3 +33,24 @@ jobs:
         run: 'yarn lint:fix'
       - name: Run Prettier
         run: 'yarn format'
+  build-test:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [ 14.x, 16.x 18.x]
+
+
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'yarn'
+      - name: yarn install and build
+        run: |
+          'yarn install --immutable --immutable-cache --check-cache'
+          yarn build
