--- a/.github/workflows/ESLintAndPrettier.yml
+++ b/.github/workflows/ESLintAndPrettier.yml
@@ -39,7 +39,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [ 14.x, 16.x 18.x]
+        node-version: [ 14.x, 16.x, 18.x]
 
 
     steps:
