--- a/.github/workflows/ESLintAndPrettier.yml
+++ b/.github/workflows/ESLintAndPrettier.yml
@@ -50,7 +50,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'yarn'
-      - name: yarn install and build
-        run: |
-          'yarn install --immutable --immutable-cache --check-cache'
-          yarn build
+      - name: Install dependencies
+        run: 'yarn install --immutable --immutable-cache --check-cache'
+      - name: Check build
+        run: 'yarn build'
