--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Build
 
 on:
   # Trigger the workflow on push or pull request,
@@ -11,29 +11,8 @@ on:
       - main
 
 jobs:
-  run-linters:
-    name: Run linters
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Check out Git repository
-        uses: actions/checkout@v3
-    #install node and cache yarn
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: 'yarn'
-
-      - name: Install dependencies
-        run: 'yarn install --immutable --immutable-cache --check-cache'
-
-      # ESLint and Prettier must be in `package.json`
-      - name: Run ESLint
-        run: 'yarn lint:fix'
-      - name: Run Prettier
-        run: 'yarn format'
-  build-test:
+  build:
+    name: Check Build
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
