--- a/.github/workflows/Linters.yml
+++ b/.github/workflows/Linters.yml
@@ -3,7 +3,7 @@ name: Lint
 on:
   # Trigger the workflow on push or pull request,
   # but only for the main branch
-  [push,pull_request]
+  [pull_request]
 
 jobs:
   run-linters:
