--- a/.github/workflows/Linters.yml
+++ b/.github/workflows/Linters.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - name: Check out Git repository
         uses: actions/checkout@v3
-    #install node and cache yarn
+      #install node and cache yarn
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
@@ -25,6 +25,6 @@ jobs:
 
       # ESLint and Prettier must be in `package.json`
       - name: Run ESLint
-        run: 'yarn lint:fix'
+        run: 'yarn lint'
       - name: Run Prettier
         run: 'yarn format'
