Config for correct Deploy to GHPages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "example-app",
-  "homepage": "https://jagtym.github.io/template-react-project/",
+  "homepage": "https://giepetetrzy.github.io/FrontendReact/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
